[gd_scene load_steps=4 format=2]

[ext_resource path="res://gui/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://fonts/outline-pixel7/outline_pixel-7.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 2 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0862745, 0.0862745, 0.0901961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -462.0
margin_top = -132.0
margin_right = 462.0
margin_bottom = 178.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="RichTextLabel" parent="VBoxContainer"]
margin_right = 924.0
margin_bottom = 52.0
rect_clip_content = false
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]Midway[/center]"
text = "Midway"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 56.0
margin_right = 924.0
margin_bottom = 116.0
custom_constants/margin_top = 50
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer"]
margin_top = 120.0
margin_right = 924.0
margin_bottom = 310.0
custom_constants/margin_right = 300
custom_constants/margin_top = 0
custom_constants/margin_left = 300
custom_constants/margin_bottom = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="options" type="VBoxContainer" parent="VBoxContainer/MarginContainer3"]
margin_left = 300.0
margin_right = 624.0
margin_bottom = 140.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20

[node name="StartButton2" type="Button" parent="VBoxContainer/MarginContainer3/options"]
margin_right = 324.0
margin_bottom = 20.0
size_flags_vertical = 0
text = "Start Game"

[node name="Custom Game" type="Button" parent="VBoxContainer/MarginContainer3/options"]
margin_top = 40.0
margin_right = 324.0
margin_bottom = 60.0
size_flags_vertical = 0
text = "Custom Game"

[node name="OptionsButton" type="Button" parent="VBoxContainer/MarginContainer3/options"]
margin_top = 80.0
margin_right = 324.0
margin_bottom = 100.0
size_flags_vertical = 0
text = "Options"

[node name="QuitButton" type="Button" parent="VBoxContainer/MarginContainer3/options"]
margin_top = 120.0
margin_right = 324.0
margin_bottom = 140.0
size_flags_vertical = 0
text = "Quit"

[connection signal="pressed" from="VBoxContainer/MarginContainer3/options/StartButton2" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer3/options/Custom Game" to="." method="_on_Custom_Game_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer3/options/QuitButton" to="." method="_on_QuitButton_pressed"]
